--- a/sources/styles/modules/_footer.css
+++ b/sources/styles/modules/_footer.css
@@ -19,9 +19,9 @@
   }
 
   &__wrapper {
-    @mixin atLarge {
-      background: -webkit-linear-gradient(top, rgba(255,255,255,1) 49%,rgba(135,204,47,1) 49%);
-    }
+    
+    background: -webkit-linear-gradient(top, rgba(255,255,255,1) 49%,rgba(135,204,47,1) 49%);
+    
 
     @mixin atHuge {
       padding-top: 100px; 
